@@ -84,7 +84,7 @@ Mifare card manipulation library (libfreefare, \-lfreefare)
 .Ft int
 .Fn mifare_classic_get_data_block_permission "MifareTag tag" "const MifareClassicBlockNumber block" "const unsigned char permission" "const MifareClassicKeyType key_type"
 .Ft int
-.Fn mifare_classic_format_sector "MifareTag tag" "const MifareClassicBlockNumber block"
+.Fn mifare_classic_format_sector "MifareTag tag" "const MifareSectorNumber sector"
 .Ft void
 .Fn mifare_classic_trailer_block "MifareClassicBlock *block" "const MifareClassicKey key_a" "const uint8_t ab_0" "const uint8_t ab_1" "const uint8_t ab_2" "const uint8_t ab_tb" "const uint8_t gpb" "const MifareClassicKey key_b"
 .\"  ____                      _       _   _
@@ -181,10 +181,7 @@ are
 .Ar MCAB_WRITE_KEYB .
 .Pp
 A whole sector can be reset to factory defaults using
-.Fn mifare_classic_format_sector
-and providing any
-.Vt block
-in the sector.
+.Fn mifare_classic_format_sector .
 .Pp
 The
 .Fn mifare_classic_trailer_block
