@@ -122,7 +122,7 @@ test_mifare_classic_format (void)
     res = mifare_classic_write (tag, 0x3e, data);
     cut_assert_equal_int (0, res, cut_message ("mifare_classic_write() failed"));
 
-    res = mifare_classic_format_sector (tag, 0x3c);
+    res = mifare_classic_format_sector (tag, mifare_classic_block_sector (0x3c));
     cut_assert_equal_int (0, res, cut_message ("mifare_classic_format_sector() failed"));
 
     res = mifare_classic_read (tag, 0x3c, &data);
